--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         return (48271 * x) % (Math.pow(2, 31) - 1);
       }
       function spectralTest() {
-        const canvas = document.getElementById("spectralTest");
-        const context = canvas.getContext("2d");
+        var canvas = document.getElementById("spectralTest");
+        var context = canvas.getContext("2d");
 
-        const scale = Math.pow(2, 9 - 31); // canvas is 2^9, Park-Miller RNG is 2^31
-        let x_1 = 1; // must be non-zero
-        let x = lcg(x_1);
-        for (let i = 0; i < 10000; i++) {
+        var scale = Math.pow(2, 9 - 31); // canvas is 2^9, Park-Miller RNG is 2^31
+        var x_1 = 1; // must be non-zero
+        var x = lcg(x_1);
+        for (var i = 0; i < 10000; i++) {
           context.fillRect(x * scale, x_1 * scale, 1, 1);
           x_1 = x;
           x = lcg(x_1);
