--- a/fibon.html
+++ b/fibon.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="viewport" content="user-scalable=no, width=device-width">
+<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <title>Fibonacci</title>
 <script type="text/javascript">
 function modifyFibonacci(step) {
