--- a/test.html
+++ b/test.html
@@ -16,9 +16,15 @@
 
     <br /><br />
 
-    One tap mobile<br />
+    One tap mobile (possible bug)<br />
     <a href="tel:+18885312272,,,4413637059#,,137532#"
       >+18885312272,,,4413637059#,,137532#</a
+    ><br />
+    <br /><br />
+
+    One tap mobile (possible fix)<br />
+    <a href="tel:+18885312272,,,4413637059#,,137532#"
+      >+18885312272%2C%2C%2C4413637059/#,,137532#</a
     ><br />
   </body>
 </html>
