--- a/test.html
+++ b/test.html
@@ -16,21 +16,7 @@
 
     <br /><br />
 
-    One tap mobile (possible bug)<br />
-    <a href="tel:+18885312272,,,4413637059#,,137532#"
-      >+18885312272,,,4413637059#,,137532#</a
-    ><br />
-
-    <br /><br />
-
-    One tap mobile (possible fix #1)<br />
-    <a href="tel:+18885312272%2C%2C%2C4413637059/#,,137532#"
-      >+18885312272,,,4413637059#,,137532#</a
-    ><br />
-
-    <br /><br />
-
-    One tap mobile (possible fix #2)<br />
+    One tap mobile<br />
     <a href="tel:%2B18885312272%2C%2C%2C4413637059%23%2C%2C137532%23"
       >+18885312272,,,4413637059#,,137532#</a
     ><br />
